update user,card
