# app/Http/Controllers/Api/User/AuthController.php
@@ -3,9 +3,42 @@
 namespace App\Http\Controllers\Api\User;
 
 use App\Http\Controllers\Controller;
+use App\Http\Resources\UserResource;
+use App\Models\User;
+use App\Repositories\AuthRepository;
 use Illuminate\Http\Request;
 
+/**
+ * @OA\Tag(
+ *     name="Auth",
+ *     description="Quản lý xác thực người dùng"
+ * )
+ * @OA\PathItem(path="/auth")
+ */
 class AuthController extends Controller
 {
-    //
+    private $authRepository;
+    public function __construct(AuthRepository $authRepository)
+    {
+        $this->authRepository = $authRepository;
+    }
+
+    /**
+     * @OA\Get(
+     *     path="/api/auth/me",
+     *     summary="Lấy thông tin người dùng hiện tại",
+     *     tags={"Auth"},
+     *     security={{"bearerAuth":{}}},
+     *     @OA\Response(
+     *         response=200,
+     *         description="Thông tin người dùng",
+     *         @OA\JsonContent(ref="#/components/schemas/User")
+     *     )
+     * )
+     */
+    public function me(Request $request)
+    {
+        $user = $this->authRepository->me();
+        return response()->json(UserResource::make($user), 200);
+    }
 }
